tests/EnvironmentTests/data/NoMatchingCallTest.xpl
integer f(integer x, integer y) {}
integer f(string x, integer y) {}

node[] main() {
  f("hello", "world");
}
